--- a/clase4/index.html
+++ b/clase4/index.html
@@ -9,6 +9,7 @@
 <body>
     <!-- abrir terminal para usar git!, dentro de la terminal selecciono el + y git bash -->
     <!-- para inciar el area de trabajo de git ingresar " git init" -->
-<!-- para añadir archivos " git add *" -->
+    <!-- para añadir archivos " git add *" -->
+    <!--para crear un commic git commit -m " primera version" -->
 </body>
 </html>
