--- a/clase4/index.html
+++ b/clase4/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>clase4</title>
 </head>
 <body>
     <!-- abrir terminal para usar git!, dentro de la terminal selecciono el + y git bash -->
     <!-- para inciar el area de trabajo de git ingresar " git init" -->
     <!-- para añadir archivos " git add *" -->
     <!--para crear un commic git commit -m " primera version" -->
+    <h2>codigos utilizados en el git</h2>
+    <ul>
+        <li>git init</li> <!-- abrimos el are de trabajo -->
+        <li>git add *</li> <!-- agregamos archivos al area -->
+        <li>git status</li>   <!-- verificamos ok -->
+        <li>git commit -m "primera version"</li> <!-- creamos un commit para trabajar -->
+        <li>git push -u origin master</li> <!-- subimos el git -->
+    </ul>
 </body>
 </html>
